--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,14 @@
     "workerman/webman-framework": "^1.0",
     "monolog/monolog": "^2.0",
     "vlucas/phpdotenv": "^4.1",
-    "illuminate/database": "^7.22"
+    "illuminate/database": "^7.22",
+    "illuminate/redis": "^7.28",
+    "workerman/validation": "^3.0",
+    "illuminate/pagination": "^7.28",
+    "jenssegers/blade": "^1.4",
+    "ext-json": "*",
+    "ext-simplexml": "*",
+    "ext-zend-opcache": "*"
   },
   "suggest": {
     "ext-event": "For better performance. "
