--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+APP_NAME="Webman Admin"
 APP_DEBUG=true
 
 SERVER_PROCESS_GROUP=''
@@ -6,9 +7,9 @@ SERVER_PROCESS_USER=''
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test
+DB_DATABASE=webmanadmin
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=root
 
 SESSION_DRIVER=file
 
